--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -30,7 +30,7 @@
     <!-- Title and Meta Text -->
     <title>{{ site.title }}</title>
     <!-- Amp -->
-    <link rel="canonical" href="http://example.ampproject.org/article-metadata.html">
+    <link rel="canonical" href="{{ site.url }}">
    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
    <script type="application/ld+json">
      {
@@ -43,6 +43,7 @@
        ]
      }
    </script>
+   <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <meta content="{{ site.description }}" name="description">
     <!-- Facebook Meta -->
@@ -93,8 +94,7 @@
             <h1>{{ site.title }}</h1>
         </div>
         <div id="main">
-
-
+            {% include form.html form-url="//your-form-url.com" %}
         </div>
     </div>
     <div id="footer">
